Closed Bug 1865625 Opened 1 year ago Closed 1 year ago

Unable to add a passkey on google account with Firefox

Categories

(Core :: DOM: Web Authentication, defect, P1)

Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
122 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox120 --- unaffected
firefox121 --- disabled
firefox122 --- verified

People

(Reporter: bmaris, Assigned: keeler)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Attached video Video showing the issue

Found in

  • Nightly 121.0a1

Affected versions

  • Nightly 121.0a1

Tested platforms

  • Affected platforms: macOS 13.6 and macOS 14
  • Unaffected platforms: Windows 10 and Ubuntu 22.04

Preconditions

  • Have a valid google account

Steps to reproduce

  1. Login to google account
  2. Go to Manage your Google Account > Security
  3. Click Passkey and then Click on Create a passkey
  4. Click on Continue or use another device and select Use security key

Expected result

  • A new passkey is successfully created

Actual result

  • Something went wrong dialog is displayed and the passkey is not created

Regression range

  • Not a regression since this is a new feature and it also reproduces in the same day the feature was added in Nightly 121.

Additional notes

  • Passkeys can be added to the google account using Safari browser but not Firefox.
  • Marking this as S2 severity because users who use Google will not be able to use this feature in Firefox.
  • I only get an error inside the Web Console when choosing the Use security key option. This is the output from the console:
Uncaught (in promise) 
Object { stack: "_.ja@https://www.gstatic.com/_/mss/boq-identity/_/js/k=boq-identity.AccountSettingsStrongauthUi.en.ehny_KKREzE.es5.O/am=EEa2_ZJF1gJCAIAI/d=1/excm=_b,_tp,passkeysview/ed=1/dg=0/wt=2/ujg=1/rs=AOaEmlH7sKxUqOaguTfj5eRa-82QnclLAg/m=_b,_tp:26:361\n_.se@https://www.gstatic.com/_/mss/boq-identity/_/js/k=boq-identity.AccountSettingsStrongauthUi.en.ehny_KKREzE.es5.O/am=EEa2_ZJF1gJCAIAI/d=1/excm=_b,_tp,passkeysview/ed=1/dg=0/wt=2/ujg=1/rs=AOaEmlH7sKxUqOaguTfj5eRa-82QnclLAg/m=_b,_tp:280:337\n_.YR.prototype.Aa@https://www.gstatic.com/_/mss/boq-identity/_/js/k=boq-identity.AccountSettingsStrongauthUi.en.ehny_KKREzE.es5.O/ck=boq-identity.AccountSettingsStrongauthUi.0kGCf5wlYQw.L.F4.O/am=EEa2_ZJF1gJCAIAI/d=1/exm=LEikZe,_b,_tp,byfTOb,lsjVmc/excm=_b,_tp,passkeysview/ed=1/wt=2/ujg=1/rs=AOaEmlHsWfdhqombindHKhvWC95hStGyDA/ee=BcQPH:zw1Icf;EVNhjf:pw70Gc;EmZ2Bf:zr1jrb;Erl4fe:FloWmf;JsbNhc:Xd8iUd;LBgRLc:SdcwHb;Me32dd:MEeYgc;NPKaK:SdcwHb;NSEoX:lazG7b;Oj465e:KG2eXe;Pjplud:EEDORb;QGR0gd:Mlhmy;SMDL4c:qfTGrb;SNUn3:Zw…", ha: false, status: {…} }

:bmaris, if you think that's a regression, could you try to find a regression range using for example mozregression?

Looks like this is failing because Google requests direct attestation. (I'm able to reproduce the issue on webauthn.io by requesting direct attestation there).

Priority: -- → P1

On macOS, the platform API for passkeys doesn't support attestation, so it must
always be "none".

Assignee: nobody → dkeeler
Status: NEW → ASSIGNED
Pushed by dkeeler@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/03593d473c69 force attestation to none in macOS platform passkey support r=jschanck
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch

The patch landed in nightly and beta is affected.
:keeler, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox121 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(dkeeler)

We're probably not going to be uplifting further fixes to macOS passkey support for 121.

Flags: needinfo?(dkeeler)

I was able to create a passkey and log in with it on Mac 14/13.4 using Firefox build 122.0a1(2023-12-03).

I was also able to verify that this is fixed on Latest Nightly build 122.0a1 from today using both google and webauthn.io websites, closing as verified fixed.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: